# stm-nucleo-rust

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x
src/: main.rs
